# med-spa

./: .gitignore  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  pyproject.toml  requirements.txt  seed.py  test_chat.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_metrics_tables.py
apps/api/app/: config.py  database.py  deps.py  main.py
apps/api/app/agent/: graph.py  instrumented_llm.py  nodes.py
apps/api/app/middleware/: auth.py  logging.py  tenant.py
apps/api/app/models/: __init__.py  base.py  conversation.py  escalation.py  knowledge_document.py  lead.py  metrics.py  tenant.py
apps/api/app/routers/: analytics.py  chat.py  conversations.py  dev_metrics.py  escalations.py  knowledge_base.py  leads.py  settings.py
apps/api/app/schemas/: chat.py  conversation.py  escalation.py  knowledge.py  lead.py
apps/api/app/services/: langfuse_client.py  lead_service.py  metrics_collector.py  notification.py  rag.py  sms.py
apps/api/app/tasks/: celery_app.py  document_ingestion.py  lead_follow_up.py  process_voicemail.py  send_notification.py
apps/api/app/utils/: encryption.py  hipaa.py  pii.py
apps/api/tests/: conftest.py
apps/api/tests/evals/: test_disclosure.py  test_escalation.py  test_hallucination.py
apps/api/tests/test_agent/: test_escalation_detection.py  test_graph.py
apps/api/tests/test_middleware/: test_auth.py
apps/api/tests/test_routers/: test_conversations.py  test_escalations.py  test_health.py  test_leads.py
apps/api/tests/test_services/: test_lead_service.py  test_rag.py
(+72 files in other folders)
